API_Doc updated, API trading added, nginx load balancer added
